--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -32,11 +32,15 @@ body{
   margin-left:25px;
   float:left;
   margin-top:13px;
-  color:white;
+  color:white !important;
 }
 
 .navbar ul li a{
-  color: white;
+  color: white !important;
+}
+
+.navbar-collapse{
+  height:100% !important;
 }
 
 .margin-t-50{
