--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,10 @@
    <%= render 'layouts/navigation' %>
 
 <div class="container">
-<%= yield %>
+    <%= render 'layouts/message' %>
+    <%= yield %>
 
-  <%= render 'layouts/footer' %>
+    <%= render 'layouts/footer' %>
 
 
 </div>
