--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
       View all Alcoholic Beverages
     </h3>
     <h2 class="left ">View, rate and review all types of alcoholic beverages and see what your friends are upto </h2>
-    <p class="left"><%= link_to "Browse Recipe Listing", "", class:"btn btn-warning btn-small" %> </p>
+    <p class="left"><%= link_to "Browse Recipe Listing", recipes_path, class:"btn btn-warning btn-small" %> </p>
     
   </div>
   
@@ -20,7 +20,7 @@
         Find What You Want
     </h3>
     <h2 class="left ">Use our smart app with your mood setting, taste preferences and the right occassion to find the beverage that best fits your needs</h2>
-    <p class="left"><%= link_to "Browse Recipe Listing", "", class:"btn btn-warning btn-small" %> </p>
+    <p class="left"><%= link_to "Browse Recipe Listing", recipes_path, class:"btn btn-warning btn-small" %> </p>
     
   </div>
   
@@ -29,7 +29,7 @@
       Share your moments
     </h3>
     <h2 class="left">Using a built in calculator, make sure you drinking safe and with the right crowd</h2>
-    <p class="left"><%= link_to "Browse Recipe Listing", "", class:"btn btn-warning btn-small" %> </p>
+    <p class="left"><%= link_to "Browse Recipe Listing", recipes_path, class:"btn btn-warning btn-small" %> </p>
     
   </div>
   
