--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,5 +1,6 @@
+<%= render 'shared/page_title', title: @recipe.name %>
 <p>
-  <h1><%= @recipe.name %></h1>
+  <h1><%=  %></h1>
 </p>
 
 <div class="row">
