--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,16 @@
 
 <div class="center jumbotron margin-t-50">
-  <h1>Welcome to the home of Alcoholix</h1>
-  <h2>This is your one stop shop for all your alcohol needs - Let's get Started</h2>
+  <h1>Welcome to the home of RecipeApp</h1>
+  <h2>This is your one stop shop for all your recipe needs - Let's get Started</h2>
   <%= link_to "Sign Up Now", "", class:"btn btn-primary btn-lg" %>
 </div>
 
 <div class="row">
   <div class="col-lg-4 col-md-4 col-sm-4">
     <h3 class="midrow left">
-      View all Alcoholic Beverages
+      View all Recipes and Beverages
     </h3>
-    <h2 class="left ">View, rate and review all types of alcoholic beverages and see what your friends are upto </h2>
+    <h2 class="left ">View, rate and review all types of recipes and see what your friends are upto </h2>
     <p class="left"><%= link_to "Browse Recipe Listing", recipes_path, class:"btn btn-warning btn-small" %> </p>
     
   </div>
@@ -19,7 +19,7 @@
     <h3 class="midrow left">
         Find What You Want
     </h3>
-    <h2 class="left ">Use our smart app with your mood setting, taste preferences and the right occassion to find the beverage that best fits your needs</h2>
+    <h2 class="left ">Use our smart app with your mood setting, taste preferences and the right occassion to find the recipe that best fits your needs</h2>
     <p class="left"><%= link_to "Browse Recipe Listing", recipes_path, class:"btn btn-warning btn-small" %> </p>
     
   </div>
@@ -28,7 +28,7 @@
     <h3 class="midrow left">
       Share your moments
     </h3>
-    <h2 class="left">Using a built in calculator, make sure you drinking safe and with the right crowd</h2>
+    <h2 class="left">Share your recipes and moments with your friends</h2>
     <p class="left"><%= link_to "Browse Recipe Listing", recipes_path, class:"btn btn-warning btn-small" %> </p>
     
   </div>
