--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Alcoholix", root_path, class: "btn btn-lg btn-success", id:"logo" %>
+        <%= link_to "RecipeApp", root_path, class: "btn btn-lg btn-success", id:"logo" %>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
